# citizen-science-bioregionalization

./: .gitignore  AUTOMATIC_CLUSTER_SELECTION_SUMMARY.md  CLUSTER_OPTIMIZATION.md  Cargo.toml  Dockerfile  FIXES_APPLIED.md  METHODOLOGY.md  Meow.ipynb  NOTEBOOK_CLUSTER_OPTIMIZATION_GUIDE.md  NOTEBOOK_INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  RUST_MIGRATION_PLAN.md  Workspace.ipynb  deploy_gcp.sh  notebook.py  package-lock.json  pyproject.toml  run.py  run_docker.sh  startup_script.sh  teardown_gcp.sh
.github/workflows/: bioregion-rs.yml  mypy.yml  pyright.yml  run.yml  unittest.yml
bioregion_rs/: .gitignore  Cargo.toml  README.md  benchmark.py  bioregion_rs.pyi  harness.py  pyproject.toml
bioregion_rs/src/: cluster_optimization.rs  colors.rs  geocode.rs  geojson.rs  lib.rs  output.rs  wkb.rs
bioregion_rs/src/dataframes/: cluster_boundary.rs  cluster_color.rs  cluster_neighbors.rs  cluster_significant_differences.rs  cluster_taxa_statistics.rs  darwin_core.rs  geocode.rs  geocode_cluster.rs  geocode_cluster_metrics.rs  geocode_neighbors.rs  geocode_silhouette_score.rs  geocode_taxa_counts.rs  mod.rs  permanova_results.rs  taxonomy.rs
bioregion_rs/src/matrices/: cluster_distance.rs  geocode_connectivity.rs  mod.rs
deployment/: .dockerignore  Dockerfile  deploy_gcp.sh  teardown_gcp.sh
frontend/: aggregations.json  app.js  global.d.ts  index.html  index.tsx  package-lock.json  package.json  style.css  tsconfig.json  types.ts
frontend/components/: App.js  App.tsx  ClusterNavigator.tsx  ClusterStats.tsx  ImageWithRetry.js  ImageWithRetry.tsx  Map.js  Map.tsx  Sidebar.js  Sidebar.tsx
frontend/store/: actions.ts  selectors.ts  useStore.ts
frontend/utils/: ImageLoadQueue.ts
inaturalist_ecoregions/: cli.py  cli_output.py  darwin_core.py  data_container.py  dependency_graph.py  geojson.py  html_output.py  logging.py  render.py
inaturalist_ecoregions/dataframes/: cluster_boundary.py  cluster_color.py  cluster_neighbors.py  cluster_significant_differences.py  cluster_taxa_counts.py  cluster_taxa_statistics.py  geocode.py  geocode_boundary.py  geocode_cluster.py  geocode_silhouette_score.py  geocode_taxa_counts.py  permanova_results.py  taxa_geographic_mean.py  taxonomy.py
inaturalist_ecoregions/lazyframes/: darwin_core_csv.py
inaturalist_ecoregions/matrices/: cluster_distance.py  geocode_connectivity.py  geocode_distance.py
inaturalist_ecoregions/plot/: dimnesionality_reduction.py  silhouette_score.py
rust_src/: Cargo.toml
rust_src/src/: lib.rs
src/: bbox.py  cache_darwin_core_parquet.py  cache_parquet.py  cli.py  cli_input.py  cli_output.py  cluster.py  cluster_color_builder.py  cluster_index.py  cluster_optimization.py  cluster_stats.py  colors.py  connectivity_matrix.py  constants.py  country_bbox.py  darwin_core.py  darwin_core_aggregations.py  darwin_core_utils.py  data_container.py  defaults.py  dendrogram.py  dependency_graph.py  distance_matrix.py  geocode.py  geohash.py  geojson.py  html_output.py  inputs.py  json_output.py  lib.rs  logging.py  mermaid.py  occurrence_cube_parser.py  output.py  point.py  render.py  types.py
src/dataframes/: cluster_boundary.py  cluster_color.py  cluster_geojson_features.py  cluster_neighbors.py  cluster_significant_differences.py  cluster_taxa_counts.py  cluster_taxa_statistics.py  darwin_core.py  geocode.py  geocode_boundary.py  geocode_cluster.py  geocode_cluster_metrics.py  geocode_neighbors.py  geocode_silhouette_score.py  geocode_taxa_counts.py  geohash.py  geohash_cluster.py  geohash_species_counts.py  geohash_taxa_counts.py  permanova_results.py  significant_taxa_images.py  taxa_geographic_mean.py  taxonomy.py
src/lazyframes/: darwin_core_csv.py
src/matrices/: cluster_distance.py  connectivity.py  distance.py  geocode_connectivity.py  geocode_distance.py
src/plot/: cluster_metrics.py  cluster_optimization.py  cluster_taxa.py  dimensionality_reduction.py  dimnesionality_reduction.py  silhouette_score.py
stubs/marimo/: __init__.pyi
templates/: cluster_report.html
terraform/: README.md  initial_build.sh  main.tf  outputs.tf  startup_script.sh.tpl  terraform.tfvars.example  variables.tf
test/: test_cluster_color.py  test_cluster_distance.py  test_cluster_geojson_features.py  test_cluster_metrics.py  test_cluster_optimization.py  test_cluster_significant_differences.py  test_cluster_taxa_heatmap.py  test_cluster_taxa_statistics.py  test_darwin_core_csv.py  test_darwin_core_utils.py  test_geocode.py  test_geocode_neighbors.py  test_geocode_silhouette_score.py  test_geocode_taxa_counts.py  test_geojson.py  test_notebook.py  test_occurrence_cube_parser.py  test_output.py  test_render.py
test/fixtures/: __init__.py  cluster_boundary.py  cluster_color.py  cluster_taxa_statistics.py  geocode.py  geocode_cluster.py  geocode_neighbors.py  geocode_taxa_counts.py  occurrence_cube_sample.csv  taxonomy.py
