[package]
name = "rust_src"
version = "0.1.0"
edition = "2021" # Using 2021 edition is standard practice

[lib]
name = "rust_dataframe_utils" # Choose a name for the Python module
crate-type = ["cdylib"] # Compile to a dynamic library for Python

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py312"] }
# polars = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace", features = ["lazy", "strings", "unique_counts"] }
polars = { version = "0.44.0", features = ["lazy", "strings", "unique_counts"] }
pyo3-polars = { version = "0.18.0", features = ["lazy"] }

# [patch.crates-io]
# polars = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-core = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-arrow = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-ffi = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-plan = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-lazy = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-python = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
# polars-utils = { git = "https://github.com/pola-rs/polars.git", rev = "f298ace" }
