[project]
name = "inaturalist-ecoregions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "black[jupyter]>=25.1.0",
    "contextily>=1.6.2",
    "geojson>=3.1.0",
    "geopandas>=1.0.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.3",
    "mypy>=1.13.0",
    "networkx>=3.2.0",
    "numba>=0.61.0",
    "polars-h3>=0.5.1",
    "polars-st>=0.1.0a10",
    "polars>=1.25.0,<1.26.0",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.0",
    "scipy>=1.11.3",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "typer>=0.15.1",
    "umap-learn>=0.5.7",
    "scikit-bio>=0.6.3",
    "altair>=5.5.0",
    "vl-convert-python>=1.7.0",
    "marimo>=0.12.2",
    "pyarrow>=19.0.1",
]

[tool.mypy]
ignore_missing_imports = true
files = [
    "*.py",
    "src/**/*.py",
    "test/**/*.py",
]
