[project]
name = "inaturalist-ecoregions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "black>=25.1.0",
    "geojson>=3.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.3",
    "mypy>=1.13.0",
    "networkx>=3.2.0",
    "numba>=0.61.0",
    "polars-h3>=0.5.1",
    "polars-st>=0.1.0a10",
    "polars>=1.30.0,<1.31.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.11.3",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "umap-learn>=0.5.7",
    "scikit-bio>=0.6.3",
    "altair>=5.5.0",
    "vl-convert-python>=1.7.0",
    "marimo>=0.12.2",
    "folium>=0.19.5",
    "polars-darwin-core>=4.0.0",
    "types-seaborn>=0.13.2.20250516",
    "types-networkx>=3.5.0.20250712",
    "types-shapely>=2.1.0.20250710",
    "scipy-stubs>=1.16.0.2",
    "ipython>=9.4.0",
    "dataframely>=1.7.6",
    "pyright>=1.1.405",
]
