[package]
name = "bioregion_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "bioregion_rs"
# cdylib: build a native Python extension module.
# rlib: also build a normal Rust lib so `cargo test` can link the crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = "0.33.1"
# GeoJSON Feature/FeatureCollection construction + serialization for
# geojson.rs; its `geo-types` feature (on by default) converts our existing
# geo::Polygon/MultiPolygon directly, and its pinned geo-types range
# (>=0.7.13, <0.8) unifies with the geo-types 0.7.19 `geo` already pulls in --
# no duplicate geo-types version.
geojson = "1.0"
h3o = "0.8"
# Kneedle elbow detection for geocode_cluster_metrics; a 1:1 port of the
# Python `kneed` package we port from. Used instead of a hand-rolled
# reimplementation of scipy's argrelextrema(mode="clip") boundary semantics,
# which is subtle to get exactly right (see the module doc comment).
kneed = "1.0"
# We enable no polars features here (bare polars-core) because every function
# uses only the eager DataFrame API. The `lazy` feature DOES compile with the
# current stable toolchain when `temporal` is enabled alongside it — the
# historical "lazy doesn't compile" note was a polars feature-unification bug
# (enabling `strings` without `temporal` leaves `polars-expr`'s string dispatch
# referencing the unlinked `polars_time` crate). We keep lazy off not because it
# can't build, but because it buys nothing: the pure-Polars stages already run in
# the Rust engine, so passing LazyFrames across the boundary would execute
# identically. Revisit only if a stage needs plan-level interop.
polars = { version = "0.54.4", default-features = false }
# `extension-module` is intentionally NOT set here: it suppresses libpython
# linking, which breaks `cargo test`'s standalone test binary. maturin adds it at
# wheel-build time (see [tool.maturin] features below).
pyo3 = { version = "0.28", features = ["abi3-py313"] }
pyo3-polars = "0.27"
# Already resolved transitively (polars depends on rand 0.9.5); pinned here to
# match, for the PERMANOVA permutation test's Monte Carlo shuffling.
rand = "0.9"
# Already resolved transitively (the geojson crate depends on it); used
# directly in output.rs to build the plain (non-GeoJSON-FeatureCollection)
# JSON array that write_json_output produces.
serde_json = "1.0"
