[package]
name = "rust_src"
version = "0.1.0"
edition = "2021" # Using 2021 edition is standard practice

[lib]
name = "rust_dataframe_utils" # Choose a name for the Python module
crate-type = ["cdylib"] # Compile to a dynamic library for Python

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] } # Updated version
