[package]
name = "rust_src"
version = "0.1.0"
edition = "2021" # Using 2021 edition is standard practice

[lib]
name = "rust_dataframe_utils" # Choose a name for the Python module
crate-type = ["cdylib"] # Compile to a dynamic library for Python

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] } # Downgraded pyo3 version
polars = { version = "0.46.0", features = ["lazy", "strings", "unique_counts"] } # Updated polars version
pyo3-polars = { version = "0.20.0", features = ["derive", "lazy"] } # Added lazy feature to pyo3-polars
